#4432 Create API for calculating correlation in polygon with lists of denominators and numerators for x and y, add filed for indicators

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   servlet:
     contextPath: /insights-api
-  port: 8625
+  port: 8626
 
 spring:
   datasource:
@@ -12,6 +12,5 @@ spring:
     hikari:
       register-mbeans: true
       pool-name: HikariPool-1
-
-statistics:
-  path: ${file_path}
+  liquibase:
+    change-log: classpath:db/changelog/master-changelog.xml
