#4432 Fix test config for DB

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,3 +3,5 @@ spring:
     driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
     platform: postgres
     url: 'test_url'
+  liquibase:
+    enabled: false
