#4430 Add async endpoint, base tests

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   datasource:
     driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
     platform: postgres
-    url: 'test_url'
+    url: jdbc:tc:postgis:13-master:///
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   liquibase:
-    enabled: false
+    enabled: true
+    change-log: classpath:db/changelog/test-master-changelog.xml
