#6969 Add date to log, turn on httptrace

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,9 @@ spring:
 graphql:
   servlet:
     corsEnabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: httptrace, health, info
