#7480 Migrate insights-api to java 16

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   datasource:
-    platform: postgres
+    driver-class-name: org.postgresql.Driver
     url: 'jdbc:postgresql://localhost:5432/postgres'
     username: postgres
     password: password
