--- a/src/main/resources/external/insights-api.service
+++ b/src/main/resources/external/insights-api.service
@@ -7,6 +7,7 @@ Type=forking
 # WARNING: environment.rc and config files can override any variable defined here.
 # WARNING: Do not guess, but read wrapper.sh script instead.
 
+Environment=JAVA_HOME="/usr/lib/jvm/java-17-amazon-corretto"
 Environment=APP_JAVA_OPTS="-server -Xms1200m -Xmx1200m -XX:+HeapDumpOnOutOfMemoryError -Xlog:gc*:file=%h/log/insights-api.GC.log"
 Environment=CLASSPATH=""
 Environment=APP_ENTRY_POINT="-jar %JAR_FILE%"
