--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <jts2geojson.version>0.16.1</jts2geojson.version>
         <guava.version>30.1-jre</guava.version>
         <postgresql-testcontainers.version>1.15.1</postgresql-testcontainers.version>
+        <micrometer-registry-prometheus.version>1.5.1</micrometer-registry-prometheus.version>
 
         <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
         <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
@@ -119,6 +120,12 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${springfox-swagger-ui.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer-registry-prometheus.version}</version>
         </dependency>
 
         <dependency>
