#7856 Add config for tracing and metrics to graphql requests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ spring:
 graphql:
   servlet:
     corsEnabled: false
+    tracing-enabled: true
+    actuator-metrics: true
 
 management:
   metrics:
