--- a/container_scripts/k8s-ingress-local.yaml
+++ b/container_scripts/k8s-ingress-local.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-insights-api
-  namespace: sandbox-kstsepina
+  namespace: platform
 spec:
   ingressClassName: nginx
   rules:
