#8518 Add local caches for analytics

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,12 @@ retry:
 
 bivatiateMatrix:
   highCorrelationLevel: 0.75
+
+cache:
+  maximumSize: 10000
+  functions: true
+  humanitarian-impact: true
+  osm-quality: true
+  population: true
+  thermal-spot: true
+  urban-core: true
