--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,17 @@
             <version>${postgresql-testcontainers.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>ch.qos.logback.contrib</groupId>
+            <artifactId>logback-jackson</artifactId>
+            <version>0.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback.contrib</groupId>
+            <artifactId>logback-json-classic</artifactId>
+            <version>0.1.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
