--- a/k8s/structure.yaml
+++ b/k8s/structure.yaml
@@ -42,6 +42,13 @@ spec:
                 name: insights-api-dev
             - secretRef:
                 name: insights-api-dev #TODO must contain data:spring.datasource.password
+          readinessProbe:
+            httpGet:
+              path: /insights-api/actuator/health/readiness
+              port: 8625
+            failureThreshold: 1 #todo test
+            periodSeconds: 60 #todo longer?
+            initialDelaySeconds: 30
 ---
 apiVersion: v1
 kind: Service
