#8383 prometheus annotations in k8s config

--- a/k8s/structure.yaml
+++ b/k8s/structure.yaml
@@ -28,6 +28,10 @@ spec:
         app.kubernetes.io/name: insights-api
         app.kubernetes.io/instance: insights-api-dev
         #TODO app.kubernetes.io/version?
+      annotations:
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '8625'
+        prometheus.io/path: /insights-api/actuator/prometheus
     spec:
       containers:
         - name: insights-api
