#8383 fixed env var names

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,8 @@ management:
       simple:
         enabled: false
   health:
+    db:
+      enabled: true
     ping:
       enabled: false
     diskspace:
