--- a/k8s/configs.yaml
+++ b/k8s/configs.yaml
@@ -8,11 +8,12 @@ metadata:
     app.kubernetes.io/instance: insights-api-dev
     stage: dev
 data:
-  spring.datasource.url: 'jdbc:postgresql://insights-api-dev-database:5432/insights-api'
-  spring.datasource.username: insights-api
+  SPRING_DATASOURCE_URL: 'jdbc:postgresql://insights-api-dev-database:5432/insights-api'
+  SPRING_DATASOURCE_USERNAME: insights-api
+  #TODO do not use uppercase var names for hikari properties otherwise startup fails with smth like 'The configuration of the pool is sealed once started.'
   spring.datasource.hikari.connection-timeout: '600000'
   spring.datasource.hikari.maximum-pool-size: '20'
-  spring.jdbc.template.query-timeout: '600'
+  SPRING_JDBC_TEMPLATE_QUERY_TIMEOUT: '600'
 ---
 #TODO: create manually
 #apiVersion: v1
@@ -25,5 +26,5 @@ data:
 #    app.kubernetes.io/instance: insights-api-dev
 #    app.kubernetes.io/version: insights-api-dev
 #data:
-#  spring.datasource.password: base64 encoded password
+#  SPRING_DATASOURCE_PASSWORD: base64 encoded password
 ---
