--- a/k8s/fluentbit.yaml
+++ b/k8s/fluentbit.yaml
@@ -75,10 +75,10 @@ spec:
       volumes:
         - name: varlog
           hostPath:
-            path: /var/log #TODO check
+            path: /var/log
         - name: varlibdockercontainers
           hostPath:
-            path: /var/lib/docker/containers #TODO check
+            path: /var/lib/docker/containers
         - name: fluent-bit-config
           configMap:
             name: fluent-bit-config
@@ -114,7 +114,7 @@ data:
     @INCLUDE filter-kubernetes.conf
     @INCLUDE output-elasticsearch.conf
 
-  input-kubernetes.conf: | #TODO check paths #TODO paths are limited to insights-api
+  input-kubernetes.conf: | #TODO paths are limited to insights-api
     [INPUT]
         Name              tail
         Tag               kube.*
@@ -125,7 +125,7 @@ data:
         Skip_Long_Lines   On
         Refresh_Interval  10
 
-  filter-kubernetes.conf: | #TODO check paths
+  filter-kubernetes.conf: |
     [FILTER]
         Name                kubernetes
         Match               kube.var.log.containers.insights-api-*
@@ -138,7 +138,7 @@ data:
         K8S-Logging.Parser  On
         K8S-Logging.Exclude Off
 
-  output-elasticsearch.conf: |  #TODO move this to a secret resource
+  output-elasticsearch.conf: |
     [OUTPUT]
         Name es
         Include_Tag_Key true
