--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,6 +72,12 @@ deploy-k8s-dev:
     - echo $CLIENT_CERT | base64 --decode > client.cert
     - echo $CLIENT_KEY | base64 --decode > client.key
     - ls -l
+    - kubectl apply -f k8s/rendered/ingress.yaml
+      --server https://api01.k8s-01.kontur.io:6443
+      --namespace sandbox-isemichastnov
+      --certificate-authority ca.crt
+      --client-certificate client.cert
+      --client-key client.key
     - kubectl apply -f k8s/rendered/configs.yaml
       --server https://api01.k8s-01.kontur.io:6443
       --namespace sandbox-isemichastnov
@@ -86,7 +92,7 @@ deploy-k8s-dev:
       --client-key client.key
   environment:
     name: K8S-DEV
-    url: 'https://dev-ilya.k8s-01.kontur.io'
+    url: 'https://dev-ilya.k8s-01.konturlabs.com'
   when: manual
   dependencies:
     - build-container
