--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,7 @@
                                     <includes>
                                         <include>structure.yaml</include>
                                         <include>configs.yaml</include>
+                                        <include>ingress.yaml</include>
                                     </includes>
                                 </resource>
                             </resources>
