--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -19,3 +19,7 @@ cache:
   urban-core: true
   correlation-rate: true
   advanced-analytics: true
+
+graphql-request:
+  parser-options:
+    max-tokens: 0x7fffffff #Integer.MAX_VALUE
