#10288 Change timeout for long graphql requests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,8 @@ graphql:
     corsEnabled: false
     tracing-enabled: false
     actuator-metrics: true
+    async:
+      timeout: 600s
 
 management:
   metrics:
