--- a/external/kubeconfig.yaml
+++ b/external/kubeconfig.yaml
@@ -12,20 +12,22 @@ clusters:
 contexts:
 - context:
     cluster: dev
-    namespace: sandbox-isemichastnov #TODO insights-api-dev
-    user: isemichastnov@kontur.io #TODO use gitlab bot
+    namespace: dev-insights-api
+    user: dev-insights-api@kontur.io
   name: dev
 - context:
     cluster: test
-    namespace: sandbox-isemichastnov #TODO insights-api-test
-    user: isemichastnov@kontur.io #TODO use gitlab bot
+    namespace: test-insights-api
+    user: test-insights-api@kontur.io
   name: test
 - context:
     cluster: prod
-    namespace: sandbox-isemichastnov #TODO insights-api-prod
-    user: isemichastnov@kontur.io #TODO use gitlab bot
+    namespace: prod-insights-api
+    user: prod-insights-api@kontur.io
   name: prod
 current-context: dev
 kind: Config
 users:
-- name: isemichastnov@kontur.io #TODO use gitlab bot
+- name: dev-insights-api@kontur.io
+- name: test-insights-api@kontur.io
+- name: prod-insights-api@kontur.io
