--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,6 @@ variables:
   MAVEN_CLI_OPTS: '--batch-mode'
   MAVEN_OPTS: '-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository'
   CERT_AUTH: $K8S_CERT_AUTH
-  CLIENT_CERT: $K8S_CLIENT_CERT
-  CLIENT_KEY: $K8S_CLIENT_KEY
 
 cache:
   paths:
@@ -63,12 +61,16 @@ deploy-test:
     - build
 
 deploy-k8s-dev:
+  variables:
+    CLIENT_CERT: $K8S_CLIENT_CERT_DEV
+    CLIENT_KEY: $K8S_CLIENT_KEY_DEV
+    STAGE: dev
   tags:
     - kontur
     - docker
   stage: deploy-k8s
   script:
-    - ./external/helm/insights-api/install_upgrade.sh dev
+    - ./external/helm/insights-api/install_upgrade.sh
   environment:
     name: K8S-DEV
     url: 'https://dev-insights-api.k8s-01.konturlabs.com'
@@ -81,12 +83,16 @@ deploy-k8s-dev:
       - 'manifests.yaml'
 
 deploy-k8s-test:
+  variables:
+    CLIENT_CERT: $K8S_CLIENT_CERT_TEST
+    CLIENT_KEY: $K8S_CLIENT_KEY_TEST
+    STAGE: test
   tags:
     - kontur
     - docker
   stage: deploy-k8s
   script:
-    - ./external/helm/insights-api/install_upgrade.sh test
+    - ./external/helm/insights-api/install_upgrade.sh
   environment:
     name: K8S-TEST
     url: 'https://test-insights-api.k8s-01.konturlabs.com'
@@ -99,12 +105,16 @@ deploy-k8s-test:
       - 'manifests.yaml'
 
 deploy-k8s-prod:
+  variables:
+    CLIENT_CERT: $K8S_CLIENT_CERT_PROD
+    CLIENT_KEY: $K8S_CLIENT_KEY_PROD
+    STAGE: prod
   tags:
     - kontur
     - docker
   stage: deploy-k8s
   script:
-    - ./external/helm/insights-api/install_upgrade.sh prod
+    - ./external/helm/insights-api/install_upgrade.sh
   environment:
     name: K8S-PROD
     url: 'https://prod-insights-api.k8s-01.konturlabs.com'
