--- a/external/helm/insights-api/templates/configmap.yaml
+++ b/external/helm/insights-api/templates/configmap.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: insights-api-{{ .Values.envName }}
-  namespace: sandbox-isemichastnov
+  name: {{ .Values.envName }}-insights-api
+  namespace: {{ .Values.envName }}-insights-api
   labels:
     app.kubernetes.io/name: insights-api
-    app.kubernetes.io/instance: insights-api-{{ .Values.envName }}
+    app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
     app.kubernetes.io/version: {{ .Chart.Version }}
     app.kubernetes.io/managed-by: "Helm"
     stage: {{ .Values.envName }}
@@ -14,7 +14,7 @@ metadata:
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
 data:
   SPRING_PROFILES_ACTIVE: {{ .Values.envName }}
-  SPRING_DATASOURCE_URL: 'jdbc:postgresql://insights-api-{{ .Values.envName }}-database:5432/insights-api'
+  SPRING_DATASOURCE_URL: 'jdbc:postgresql://{{ .Values.envName }}-insights-api-database:5432/insights-api'
   SPRING_DATASOURCE_USERNAME: insights-api
   #TODO do not use uppercase var names for hikari properties otherwise startup fails with smth like 'The configuration of the pool is sealed once started.'
   spring.datasource.hikari.connection-timeout: '600000'
@@ -28,11 +28,11 @@ data:
 #apiVersion: v1
 #kind: Secret
 #metadata:
-#  name: insights-api-{{ .Values.envName }}
+#  name: {{ .Values.envName }}-insights-api
 #  namespace: sandbox-isemichastnov
 #labels:
 #  app.kubernetes.io/name: insights-api
-#  app.kubernetes.io/instance: insights-api-{{ .Values.envName }}
+#  app.kubernetes.io/instance: {{ .Values.envName }}-insights-api
 #  app.kubernetes.io/version: {{ .Chart.Version }}
 #  stage: {{ .Values.envName }}
 #data:
